--- a/intl.zh-CN/镜像/公共镜像/公共镜像发布记录.md
+++ b/intl.zh-CN/镜像/公共镜像/公共镜像发布记录.md
@@ -514,6 +514,11 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server 2012 R2 数据中心版|-   中文版：win2012r2\_9600\_x64\_dtc\_zh-cn\_40G\_alibase\_20210516.vhd
+-   英文版：win2012r2\_9600\_x64\_dtc\_en-us\_40G\_alibase\_20210516.vhd
+
+|2021-05-16|-   更新2021年05月份系统补丁：KB5003209
+-   修复CVE-2020-24587、CVE-2021-31186、CVE-2021-28479等漏洞 |
 |Windows Server 2012 R2 数据中心版|-   中文版：win2012r2\_9600\_x64\_dtc\_zh-cn\_40G\_alibase\_20210416.vhd
 -   英文版：win2012r2\_9600\_x64\_dtc\_en-us\_40G\_alibase\_20210416.vhd
 
@@ -631,6 +636,11 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server 2016 数据中心版|-   中文版：win2016\_1607\_x64\_dtc\_zh-cn\_40G\_alibase\_20210516.vhd
+-   英文版：win2016\_1607\_x64\_dtc\_en-us\_40G\_alibase\_20210516.vhd
+
+|2021-05-16|-   更新2021年05月份系统补丁：KB5003197
+-   修复CVE-2020-24587、CVE-2021-31186、CVE-2021-28479等漏洞 |
 |Windows Server 2016 数据中心版|-   中文版：win2016\_1607\_x64\_dtc\_zh-cn\_40G\_alibase\_20210416.vhd
 -   英文版：win2016\_1607\_x64\_dtc\_en-us\_40G\_alibase\_20210416.vhd
 
@@ -748,6 +758,16 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server 2019 with Container 数据中心版|-   中文版：win2019\_1809\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210516.vhd
+-   英文版：win2019\_1809\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210516.vhd
+
+|2021-05-16|-   更新2021年05月份系统补丁：KB5003171
+-   修复CVE-2020-24587、CVE-2021-31186、CVE-2021-28479等漏洞 |
+|Windows Server 2019 数据中心版|-   中文版：win2019\_1809\_x64\_dtc\_zh-cn\_40G\_alibase\_20210516.vhd
+-   英文版：win2019\_1809\_x64\_dtc\_en-us\_40G\_alibase\_20210516.vhd
+
+|2021-05-16|-   更新2021年05月份系统补丁：KB5003171
+-   修复CVE-2020-24587、CVE-2021-31186、CVE-2021-28479等漏洞 |
 |Windows Server 2019 with Container 数据中心版|-   中文版：win2019\_1809\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210416.vhd
 -   英文版：win2019\_1809\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210416.vhd
 
@@ -1039,6 +1059,16 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server Version 2004 with Container 数据中心版|-   中文版：wincore\_2004\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210516.vhd
+-   英文版：wincore\_2004\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210516.vhd
+
+|2021-05-16|-   更新2021年05月份系统补丁：KB5003173
+-   修复CVE-2020-24587、CVE-2021-31186、CVE-2021-28479、CVE-2021-31205、CVE-2021-31166等漏洞 |
+|Windows Server Version 2004 数据中心版|-   中文版：wincore\_2004\_x64\_dtc\_zh-cn\_40G\_alibase\_20210516.vhd
+-   英文版：wincore\_2004\_x64\_dtc\_en-us\_40G\_alibase\_20210516.vhd
+
+|2021-05-16|-   更新2021年05月份系统补丁：KB5003173
+-   修复CVE-2020-24587、CVE-2021-31186、CVE-2021-28479、CVE-2021-31205、CVE-2021-31166等漏洞 |
 |Windows Server Version 2004 with Container 数据中心版|-   中文版：wincore\_2004\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210416.vhd
 -   英文版：wincore\_2004\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210416.vhd
 
