--- a/cn.zh-CN/动态与公告/新功能发布记录.md
+++ b/cn.zh-CN/动态与公告/新功能发布记录.md
@@ -12,7 +12,7 @@
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|:---|:---|----|:---|
 |实例规格族|发布通用型实例规格族g7、计算型实例规格族c7、内存型实例规格族r7。|2021-04-19|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
-|镜像|发布公共镜像Alibaba Cloud Linux 3。|2021-04-16|部分|[Alibaba Cloud Linux 3概述](/cn.zh-CN/镜像/Alibaba Cloud Linux 3/Alibaba Cloud Linux 3概述.md)|
+|镜像|发布公共镜像Alibaba Cloud Linux 3。|2021-04-16|全部|[Alibaba Cloud Linux 3概述](/cn.zh-CN/镜像/Alibaba Cloud Linux 3/Alibaba Cloud Linux 3概述.md)|
 |预留实例券|预留实例券支持抵扣更多规格族。|2021-04-15|全部|[预留实例券概述](/cn.zh-CN/实例/选择实例购买方式/预留实例券/预留实例券概述.md)|
 |实例健康诊断|-   实例健康诊断支持选择问题场景。
 -   操作系统内相关配置诊断支持更多诊断项。
