--- a/intl.zh-CN/动态与公告/新功能发布记录.md
+++ b/intl.zh-CN/动态与公告/新功能发布记录.md
@@ -10,7 +10,7 @@
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|:---|:---|----|:---|
 |实例规格族|发布通用型实例规格族g7、计算型实例规格族c7、内存型实例规格族r7。|2021-04-19|部分|[实例规格族](/intl.zh-CN/实例/实例规格族.md)|
-|镜像|发布公共镜像Alibaba Cloud Linux 3。|2021-04-16|部分|[Alibaba Cloud Linux 3概述](/intl.zh-CN/镜像/Alibaba Cloud Linux 3/Alibaba Cloud Linux 3概述.md)|
+|镜像|发布公共镜像Alibaba Cloud Linux 3。|2021-04-16|全部|[Alibaba Cloud Linux 3概述](/intl.zh-CN/镜像/Alibaba Cloud Linux 3/Alibaba Cloud Linux 3概述.md)|
 |预留实例券|预留实例券支持抵扣更多规格族。|2021-04-15|全部|[预留实例券概述](/intl.zh-CN/实例/选择实例购买方式/预留实例券/预留实例券概述.md)|
 |实例休眠|发布实例休眠功能，休眠实例后再次启动实例，ECS实例会自动恢复至休眠前的应用程序状态。|2021-04-06|部分|[休眠实例](/intl.zh-CN/实例/管理实例/休眠实例.md)|
 |快照|发布实例快照功能，您可以为一台ECS实例中的多个云盘同时创建快照，保证数据写入时序上的一致性。|2021-04-06|部分|[创建多个云盘快照（实例快照）](/intl.zh-CN/快照/使用实例快照/创建多个云盘快照（实例快照）.md)|
