--- a/intl.zh-CN/标签与资源/资源保障/容量预定/购买立即生效容量预定.md
+++ b/intl.zh-CN/标签与资源/资源保障/容量预定/购买立即生效容量预定.md
@@ -8,6 +8,8 @@ keyword: [容量预定, 私有池, 立即生效, 按量付费, 包年包月, 预
 
 购买立即生效容量预定时需要指定实例规格、可用区、操作系统属性，只能用于保障成功创建属性匹配的按量付费实例。
 
+**说明：** 资源保障正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+
 ## 操作步骤
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
@@ -56,6 +58,6 @@ keyword: [容量预定, 私有池, 立即生效, 按量付费, 包年包月, 预
 
 9.  选中需要购买的容量预定，阅读并选中预定须知。如无问题，单击**确认购买**并按提示完成支付流程。
 
-    您可以在容量预定列表页查看购买的容量预定，状态为**生效中**即表示已成功创建，可以在创建按量付费实例时使用该容量预定关联私有池的容量。具体操作，请参见[使用私有池容量]()。
+    您可以在容量预定列表页查看购买的容量预定，状态为**生效中**即表示已成功创建，可以在创建按量付费实例时使用该容量预定关联私有池的容量。具体操作，请参见[使用私有池容量](/intl.zh-CN/标签与资源/资源保障/使用私有池容量.md)。
 
 
