--- a/intl.zh-CN/标签与资源/资源保障/弹性保障/购买弹性保障.md
+++ b/intl.zh-CN/标签与资源/资源保障/弹性保障/购买弹性保障.md
@@ -8,6 +8,8 @@ keyword: [资源预定, 弹性保障, 私有资源池, 私有池, 按量付费]
 
 购买弹性保障时需要支付一笔较低的保障费用，用于保障资源供应确定性。使用关联私有池容量创建按量付费实例后，您仍然需要遵循按量付费标准支付ECS实例的小时账单。
 
+**说明：** 资源保障正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+
 购买弹性保障时必须指定实例规格、可用区属性，只能用于保障成功创建属性匹配的按量付费实例。
 
 ## 操作步骤
@@ -54,6 +56,6 @@ keyword: [资源预定, 弹性保障, 私有资源池, 私有池, 按量付费]
 
 9.  选中需要购买的弹性保障，阅读并选中预定须知。如无问题，单击**确认购买**并按提示完成支付流程。
 
-    您可以在弹性保障列表页查看购买的弹性保障，状态为**生效中**即表示弹性保障已生效，可以在创建按量付费实例时使用该弹性保障关联私有池的容量。具体操作，请参见[使用私有池容量]()。
+    您可以在弹性保障列表页查看购买的弹性保障，状态为**生效中**即表示弹性保障已生效，可以在创建按量付费实例时使用该弹性保障关联私有池的容量。具体操作，请参见[使用私有池容量](/intl.zh-CN/标签与资源/资源保障/使用私有池容量.md)。
 
 
