--- a/intl.zh-CN/产品简介/地域和可用区.md
+++ b/intl.zh-CN/产品简介/地域和可用区.md
@@ -11,16 +11,17 @@
     |地域名称|所在城市|Region ID|可用区数量|
     |----|----|---------|-----|
     |华北 1|青岛|cn-qingdao|2|
-    |华北 2|北京|cn-beijing|8|
+    |华北 2|北京|cn-beijing|10|
     |华北 3|张家口|cn-zhangjiakou|3|
     |华北 5|呼和浩特|cn-huhehaote|2|
-    |华北 6|乌兰察布|cn-wulanchabu|2|
+    |华北 6|乌兰察布|cn-wulanchabu|3|
     |华东 1|杭州|cn-hangzhou|8|
-    |华东 2|上海|cn-shanghai|7|
-    |华南 1|深圳|cn-shenzhen|5|
+    |华东 2|上海|cn-shanghai|8|
+    |华南 1|深圳|cn-shenzhen|6|
     |华南 2|河源|cn-heyuan|2|
     |华南 3|广州|cn-guangzhou|2|
     |西南 1|成都|cn-chengdu|2|
+    |南京|南京（属于[本地地域](https://www.aliyun.com/page-source/website/infrastructure/local-regions)，邀测中）|cn-nanjing|1|
 
 -   其他国家和地区
 
