--- a/intl.zh-CN/实例/实例规格族.md
+++ b/intl.zh-CN/实例/实例规格族.md
@@ -21,7 +21,8 @@ keyword: [ECS实例规格族, 实例规格族]
 |企业级x86计算规格族群|
 |------------|
 |推荐|其他在售（如果售罄，建议使用推荐规格族）|
-|-   [通用型实例规格族g7](#g7)
+|-   [通用型实例规格族g7a](#g7a)
+-   [通用型实例规格族g7](#g7)
 -   [安全增强通用型实例规格族g7t](#g7t)
 -   [网络增强型实例规格族g7ne](#g7ne)
 -   [通用型实例规格族g6](#g6)
@@ -32,6 +33,7 @@ keyword: [ECS实例规格族, 实例规格族]
 -   [通用型实例规格族g5](#g5)
 -   [存储增强型实例规格族g5se](#g5se)
 -   [网络增强型实例规格族g5ne](#g5ne)
+-   [计算型实例规格族c7a](#c7a)
 -   [计算型实例规格族c7](#c7)
 -   [安全增强计算型实例规格族c7t](#c7t)
 -   [计算型实例规格族c6](#c6)
@@ -40,6 +42,7 @@ keyword: [ECS实例规格族, 实例规格族]
 -   [计算平衡增强型实例规格族c6e](#c6e)
 -   [计算型实例规格族c5](#c5)
 -   [密集计算型实例规格族ic5](#ic5)
+-   [内存型实例规格族r7a](#r7a)
 -   [内存型实例规格族r7](#r7)
 -   [安全增强内存型实例规格族r7t](#r7t)
 -   [内存型实例规格族r6](#r6)
@@ -97,6 +100,7 @@ keyword: [ECS实例规格族, 实例规格族]
 -   [GPU计算型弹性裸金属服务器实例规格族ebmgn6e](#ebmgn6e)
 -   [GPU计算型弹性裸金属服务器实例规格族ebmgn6v](#ebmgn6v)
 -   [GPU计算型弹性裸金属服务器实例规格族ebmgn6i](#ebmgn6i)
+-   [计算型弹性裸金属服务器实例规格族ebmc6me](#ebmc6me)
 -   [计算型弹性裸金属服务器实例规格族ebmc6a](#ebmc6a)
 -   [计算型（平衡增强）弹性裸金属服务器实例规格族ebmc6e](#ebmc6e)
 -   [计算型弹性裸金属服务器实例规格族ebmc6](#ebmc6)
@@ -139,6 +143,59 @@ keyword: [ECS实例规格族, 实例规格族]
 -   [上一代共享型实例规格族xn4、n4、mn4、e4](#xn4-n4-mn4-e4) |
 
 停售的规格族群详情请参见[已停售的实例规格](/intl.zh-CN/实例/选择实例规格/已停售的实例规格.md)。
+
+## 通用型实例规格族g7a
+
+本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+
+g7a的特点如下：
+
+-   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
+-   计算：
+    -   处理器与内存配比为1:4
+    -   处理器：2.55 GHz主频的AMD EPYCTM MILAN处理器，单核睿频最高3.5 GHz，计算性能稳定
+    -   支持开启或关闭超线程配置
+
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
+
+-   存储：
+    -   I/O优化实例
+    -   支持ESSD云盘、SSD云盘和高效云盘
+    -   小规格实例云盘IOPS和云盘带宽具备突发能力
+    -   实例存储I/O性能与计算规格对应（规格越高存储I/O性能越强）
+
+        **说明：** 全新一代企业级实例规格族的存储I/O性能表请参见[存储I/O性能](/intl.zh-CN/块存储/性能/存储I/O性能.md)。
+
+-   网络：
+    -   支持IPv6
+    -   超高网络PPS收发包能力
+    -   小规格实例网络带宽具备突发能力
+    -   实例网络性能与计算规格对应（规格越高网络性能越强）
+-   适用场景：
+    -   视频编解码
+    -   高网络包收发场景
+    -   网站和应用服务器
+    -   中小型数据库系统、缓存、搜索集群
+    -   游戏服务器
+    -   测试开发，例如DevOps
+    -   其他通用类型的企业级应用
+
+g7a包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|---|:---|-----------|-----------------|
+|ecs.g7a.large|2|8|1/最高10|90万|最高25万|2|3|1.25/最高11万|1/最高6|
+|ecs.g7a.xlarge|4|16|1.5/最高10|100万|最高25万|4|4|2万/最高11万|1.5/最高6|
+|ecs.g7a.2xlarge|8|32|2.5/最高10|160万|最高25万|8|4|3万/最高11万|2/最高6|
+|ecs.g7a.4xlarge|16|64|5/最高10|200万|30万|8|8|6万/最高11万|3/最高6|
+|ecs.g7a.8xlarge|32|128|8/最高10|300万|60万|16|7|7.5万/最高11万|4/最高6|
+|ecs.g7a.16xlarge|64|256|16/无|600万|100万|32|7|15万|8|
+|ecs.g7a.32xlarge|128|512|32/无|1200万|200万|32|15|30万|16|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 通用型实例规格族g7
 
@@ -668,6 +725,60 @@ g5ne包括的实例规格及指标数据如下表所示。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
 -   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
+## 计算型实例规格族c7a
+
+本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+
+c7a的特点如下：
+
+-   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
+-   计算：
+    -   处理器与内存配比为1:2
+    -   处理器：2.55 GHz主频的AMD EPYCTM MILAN处理器，单核睿频最高3.5 GHz，计算性能稳定
+    -   支持开启或关闭超线程配置
+
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
+
+-   存储：
+    -   I/O优化实例
+    -   支持ESSD云盘、SSD云盘和高效云盘
+    -   小规格实例云盘IOPS及云盘带宽具备突发能力
+    -   实例存储I/O性能与计算规格对应（规格越高存储I/O性能越强）
+
+        **说明：** 全新一代企业级实例规格族的存储I/O性能表请参见[存储I/O性能](/intl.zh-CN/块存储/性能/存储I/O性能.md)。
+
+-   网络：
+    -   支持IPv6
+    -   超高网络PPS收发包能力
+    -   小规格实例网络带宽具备突发能力
+    -   实例网络性能与计算规格对应（规格越高网络性能越强）
+-   适用场景：
+    -   视频编解码
+    -   高网络包收发场景，例如视频弹幕、电信业务转发等
+    -   Web前端服务器
+    -   大型多人在线游戏（MMO）前端
+    -   测试开发，例如DevOps
+    -   数据分析、批量计算
+    -   高性能科学和工程应用
+    -   各种类型和规模的企业级应用
+
+c7a包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|---|:---|-----------|-----------------|
+|ecs.c7a.large|2|4|1/最高10|90万|最高25万|2|3|1.25/最高11万|1/最高6|
+|ecs.c7a.xlarge|4|8|1.5/最高10|100万|最高25万|4|4|2万/最高11万|1.5/最高6|
+|ecs.c7a.2xlarge|8|16|2.5/最高10|160万|最高25万|8|4|3万/最高11万|2/最高6|
+|ecs.c7a.4xlarge|16|32|5/最高10|200万|30万|8|8|6万/最高11万|3/最高6|
+|ecs.c7a.8xlarge|32|64|8/最高10|300万|60万|16|7|7.5万/最高11万|4/最高6|
+|ecs.c7a.16xlarge|64|128|16/无|600万|100万|32|7|15万|8|
+|ecs.c7a.32xlarge|128|256|32/无|1200万|200万|32|15|30万|16|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
+
 ## 计算型实例规格族c7
 
 c7的特点如下：
@@ -1043,6 +1154,57 @@ ic5包括的实例规格及指标数据如下表所示。
 |ecs.ic5.2xlarge|8|8|2.5|80万|2|4|10|
 |ecs.ic5.3xlarge|12|12|4|90万|4|6|10|
 |ecs.ic5.4xlarge|16|16|5|100万|4|8|20|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
+
+## 内存型实例规格族r7a
+
+本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+
+r7a的特点如下：
+
+-   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
+-   计算：
+    -   处理器与内存配比为1:8
+    -   处理器：2.55 GHz主频的AMD EPYCTM MILAN处理器，单核睿频最高3.5 GHz，计算性能稳定
+    -   支持开启或关闭超线程配置
+
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
+
+-   存储：
+    -   I/O优化实例
+    -   支持ESSD云盘、SSD云盘和高效云盘
+    -   小规格实例云盘IOPS及云盘带宽具备突发能力
+    -   实例存储I/O性能与计算规格对应（规格越高存储I/O性能越强）
+
+        **说明：** 全新一代企业级实例规格族的存储I/O性能表请参见[存储I/O性能](/intl.zh-CN/块存储/性能/存储I/O性能.md)。
+
+-   网络：
+    -   支持IPv6
+    -   超高网络PPS收发包能力
+    -   小规格实例网络带宽具备突发能力
+    -   实例网络性能与计算规格对应（规格越高网络性能越强）
+-   适用场景：
+    -   高性能数据库、内存数据库
+    -   高网络包收发场景，例如视频弹幕、电信业务转发等
+    -   数据分析与挖掘、分布式内存缓存
+    -   Hadoop、Spark集群以及其他企业级大内存需求应用
+    -   区块链应用
+
+r7a包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|---|:---|-----------|-----------------|
+|ecs.r7a.large|2|16|1/最高10|90万|最高25万|2|3|1.25/最高11万|1/最高6|
+|ecs.r7a.xlarge|4|32|1.5/最高10|100万|最高25万|4|4|2万/最高11万|1.5/最高6|
+|ecs.r7a.2xlarge|8|64|2.5/最高10|160万|最高25万|8|4|3万/最高11万|2/最高6|
+|ecs.r7a.4xlarge|16|128|5/最高10|200万|30万|8|8|6万/最高11万|3/最高6|
+|ecs.r7a.8xlarge|32|256|8/最高10|300万|60万|16|7|7.5万/最高11万|4/最高6|
+|ecs.r7a.16xlarge|64|512|16/无|600万|100万|32|7|15万|8|
+|ecs.r7a.32xlarge|128|1024|32/无|1200万|200万|32|15|30万|16|
 
 **说明：**
 
@@ -2938,6 +3100,37 @@ ebmgn6i包括的实例规格及指标数据如下表所示。
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|---|-----|:-----------|:-------|:--|:---|-------|
 |ecs.ebmgn6i.24xlarge|96|384.0|NVIDIA T4 \* 4|16GB \* 4|30.0|450万|8|32|10|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
+
+## 计算型弹性裸金属服务器实例规格族ebmc6me
+
+ebmc6me的特点如下：
+
+-   提供专属硬件资源和物理隔离
+-   处理器与内存配比约为1:3
+-   处理器：2.3 GHz主频的Intel ® Xeon ® Gold 5218（Cascade Lake），睿频3.9 GHz
+-   I/O优化实例
+-   支持ESSD云盘、SSD云盘和高效云盘
+-   支持IPv6
+-   仅支持专有网络VPC
+-   高网络性能，600万PPS网络收发包能力
+-   适用场景：
+    -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
+    -   容器（包括但不限于Docker、Clear Container、Pouch等）
+    -   视频编解码、渲染等
+    -   大型多人在线游戏（MMO）前端
+    -   高性能科学和工程应用
+
+ebmc6me包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmc6me.16xlarge|64|192.0|32.0|600万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
