--- a/cn.zh-CN/实例/选择实例规格/弹性裸金属服务器/弹性裸金属服务器概述.md
+++ b/cn.zh-CN/实例/选择实例规格/弹性裸金属服务器/弹性裸金属服务器概述.md
@@ -12,6 +12,7 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
         -   [通用型（平衡增强）弹性裸金属服务器实例规格族ebmg6e](#section_69g_hx0_psw)
         -   [通用型弹性裸金属服务器实例规格族ebmg6](#section_qkb_ez6_9c5)
     -   计算型：
+        -   [计算型弹性裸金属服务器实例规格族ebmc6me](#ebmc6me)
         -   [计算型弹性裸金属服务器实例规格族ebmc6a](#section_m8p_b2e_yqq)
         -   [计算型（平衡增强）弹性裸金属服务器实例规格族ebmc6e](#section_mdc_24m_q3e)
         -   [计算型弹性裸金属服务器实例规格族ebmc6](#section_zec_q52_xn9)
@@ -198,6 +199,37 @@ ebmg6包括的实例规格及指标数据如下表所示。
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
 |ecs.ebmg6.26xlarge|104|384.0|32.0|600万|180万|32|10|20.0万|16.0|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
+
+## 计算型弹性裸金属服务器实例规格族ebmc6me
+
+ebmc6me的特点如下：
+
+-   提供专属硬件资源和物理隔离
+-   处理器与内存配比约为1:3
+-   处理器：2.3 GHz主频的Intel ® Xeon ® Gold 5218（Cascade Lake），睿频3.9 GHz
+-   I/O优化实例
+-   支持ESSD云盘、SSD云盘和高效云盘
+-   支持IPv6
+-   仅支持专有网络VPC
+-   高网络性能，600万PPS网络收发包能力
+-   适用场景：
+    -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
+    -   容器（包括但不限于Docker、Clear Container、Pouch等）
+    -   视频编解码、渲染等
+    -   大型多人在线游戏（MMO）前端
+    -   高性能科学和工程应用
+
+ebmc6me包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmc6me.16xlarge|64|192.0|32.0|600万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
