--- a/cn.zh-CN/实例/选择实例规格/通用型.md
+++ b/cn.zh-CN/实例/选择实例规格/通用型.md
@@ -7,6 +7,7 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
 本文介绍云服务器ECS通用型实例规格族的特点，并列出了具体的实例规格。
 
 -   推荐
+    -   [通用型实例规格族g7a](#g7a)
     -   [通用型实例规格族g7](#g7)
     -   [安全增强通用型实例规格族g7t](#section_bew_6jv_c0k)
     -   [网络增强型实例规格族g7ne](#section_srt_k9b_at3)
@@ -21,6 +22,59 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
 
     [通用网络增强型实例规格族sn2ne](#section_1ki_kxs_w47)
 
+
+## 通用型实例规格族g7a
+
+本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+
+g7a的特点如下：
+
+-   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
+-   计算：
+    -   处理器与内存配比为1:4
+    -   处理器：2.55 GHz主频的AMD EPYCTM MILAN处理器，单核睿频最高3.5 GHz，计算性能稳定
+    -   支持开启或关闭超线程配置
+
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
+
+-   存储：
+    -   I/O优化实例
+    -   支持ESSD云盘、SSD云盘和高效云盘
+    -   小规格实例云盘IOPS和云盘带宽具备突发能力
+    -   实例存储I/O性能与计算规格对应（规格越高存储I/O性能越强）
+
+        **说明：** 全新一代企业级实例规格族的存储I/O性能表请参见[存储I/O性能](/cn.zh-CN/块存储/性能/存储I/O性能.md)。
+
+-   网络：
+    -   支持IPv6
+    -   超高网络PPS收发包能力
+    -   小规格实例网络带宽具备突发能力
+    -   实例网络性能与计算规格对应（规格越高网络性能越强）
+-   适用场景：
+    -   视频编解码
+    -   高网络包收发场景
+    -   网站和应用服务器
+    -   中小型数据库系统、缓存、搜索集群
+    -   游戏服务器
+    -   测试开发，例如DevOps
+    -   其他通用类型的企业级应用
+
+g7a包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|---|:---|-----------|-----------------|
+|ecs.g7a.large|2|8|1/最高10|90万|最高25万|2|3|1.25/最高11万|1/最高6|
+|ecs.g7a.xlarge|4|16|1.5/最高10|100万|最高25万|4|4|2万/最高11万|1.5/最高6|
+|ecs.g7a.2xlarge|8|32|2.5/最高10|160万|最高25万|8|4|3万/最高11万|2/最高6|
+|ecs.g7a.4xlarge|16|64|5/最高10|200万|30万|8|8|6万/最高11万|3/最高6|
+|ecs.g7a.8xlarge|32|128|8/最高10|300万|60万|16|7|7.5万/最高11万|4/最高6|
+|ecs.g7a.16xlarge|64|256|16/无|600万|100万|32|7|15万|8|
+|ecs.g7a.32xlarge|128|512|32/无|1200万|200万|32|15|30万|16|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
 
 ## 通用型实例规格族g7
 
