--- a/cn.zh-CN/产品计费/计费方式/按量付费实例停机不收费.md
+++ b/cn.zh-CN/产品计费/计费方式/按量付费实例停机不收费.md
@@ -20,7 +20,7 @@ keyword: [按量付费, 停机不收费, 计算资源, 公网IP地址, 保留并
 
 -   实例规格族不包含本地存储
 
-    包含本地存储能力的实例规格族不支持停机不收费，例如d1、d1ne、i1、i2、i2g和gn5。更多信息，请参见[实例规格族](/cn.zh-CN/实例/实例规格族.md)中的本地存储列。
+    包含本地存储能力的实例规格族不支持停机不收费，例如大数据型、本地SSD型等。更多信息，请参见[实例规格族](/cn.zh-CN/实例/实例规格族.md)中的本地存储列。
 
 -   实例规格族不包含持久内存
 
