--- a/cn.zh-CN/实例/选择实例规格/内存型/内存型.md
+++ b/cn.zh-CN/实例/选择实例规格/内存型/内存型.md
@@ -7,6 +7,7 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
 本文介绍云服务器ECS内存型实例规格族的特点，并列出了具体的实例规格。
 
 -   推荐
+    -   [内存型实例规格族r7a](#r7a)
     -   [内存型实例规格族r7](#r7)
     -   [安全增强内存型实例规格族r7t](#section_kni_2nn_01u)
     -   [持久内存型实例规格族re6p](#section_k8y_u9u_vax)
@@ -20,6 +21,57 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
     -   [内存增强型实例规格族re4e](#section_6zy_cbu_zum)
     -   [内存网络增强型实例规格族se1ne](#section_k1p_8hm_72f)
     -   [内存型实例规格族se1](#section_s5w_lh9_07j)
+
+## 内存型实例规格族r7a
+
+本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+
+r7a的特点如下：
+
+-   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
+-   计算：
+    -   处理器与内存配比为1:8
+    -   处理器：2.55 GHz主频的AMD EPYCTM MILAN处理器，单核睿频最高3.5 GHz，计算性能稳定
+    -   支持开启或关闭超线程配置
+
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
+
+-   存储：
+    -   I/O优化实例
+    -   支持ESSD云盘、SSD云盘和高效云盘
+    -   小规格实例云盘IOPS及云盘带宽具备突发能力
+    -   实例存储I/O性能与计算规格对应（规格越高存储I/O性能越强）
+
+        **说明：** 全新一代企业级实例规格族的存储I/O性能表请参见[存储I/O性能](/cn.zh-CN/块存储/性能/存储I/O性能.md)。
+
+-   网络：
+    -   支持IPv6
+    -   超高网络PPS收发包能力
+    -   小规格实例网络带宽具备突发能力
+    -   实例网络性能与计算规格对应（规格越高网络性能越强）
+-   适用场景：
+    -   高性能数据库、内存数据库
+    -   高网络包收发场景，例如视频弹幕、电信业务转发等
+    -   数据分析与挖掘、分布式内存缓存
+    -   Hadoop、Spark集群以及其他企业级大内存需求应用
+    -   区块链应用
+
+r7a包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|---|:---|-----------|-----------------|
+|ecs.r7a.large|2|16|1/最高10|90万|最高25万|2|3|1.25/最高11万|1/最高6|
+|ecs.r7a.xlarge|4|32|1.5/最高10|100万|最高25万|4|4|2万/最高11万|1.5/最高6|
+|ecs.r7a.2xlarge|8|64|2.5/最高10|160万|最高25万|8|4|3万/最高11万|2/最高6|
+|ecs.r7a.4xlarge|16|128|5/最高10|200万|30万|8|8|6万/最高11万|3/最高6|
+|ecs.r7a.8xlarge|32|256|8/最高10|300万|60万|16|7|7.5万/最高11万|4/最高6|
+|ecs.r7a.16xlarge|64|512|16/无|600万|100万|32|7|15万|8|
+|ecs.r7a.32xlarge|128|1024|32/无|1200万|200万|32|15|30万|16|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 内存型实例规格族r7
 
@@ -64,9 +116,9 @@ r7包括的实例规格及指标数据如下表所示。
 
 **说明：**
 
--   建议您使用Workbench登录Windows实例。如果使用VNC登录Windows实例，可能会出现两个光标，您可以参见[为什么使用VNC登录Windows实例后出现两个光标](/cn.zh-CN/实例/实例FAQ.md)修改鼠标设置来解决此问题。
+-   建议您使用Workbench登录Windows实例。如果使用VNC登录Windows实例，可能会出现两个光标，您可以参见[为什么使用VNC登录Windows实例后出现两个光标](/cn.zh-CN/实例/实例FAQ.mdsection_jma_ml8_us3)修改鼠标设置来解决此问题。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 安全增强内存型实例规格族r7t
 
@@ -118,7 +170,7 @@ r7t包括的实例规格及指标数据如下表所示。
 -   本实例规格族正在邀测中，资源有限，无SLA保证。如果您确认申请使用，请按照业务最小需求申请。
 -   Intel Ice Lake仅支持基于Intel SGX DCAP的远程证明方式，不支持基于Intel EPID的远程证明方式，您可能需要适配程序后才能正常使用远程证明功能。更多远程证明的信息，请参见[attestation-service](https://software.intel.com/content/www/us/en/develop/topics/software-guard-extensions/attestation-services.html)。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 持久内存型实例规格族re6p
 
@@ -171,7 +223,7 @@ re6p包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 内存型实例规格族r6a
 
@@ -219,7 +271,7 @@ r6a包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 内存平衡增强型实例规格族r6e
 
@@ -267,7 +319,7 @@ r6e包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 -   网络能力为单项测试最高能力。例如，单项测试网络带宽能力时，不会对网络收发包能力和其他指标同时做压力测试。
 
 ## 内存型实例规格族r6
@@ -320,7 +372,7 @@ r6包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 内存增强型实例规格族re6
 
@@ -351,7 +403,7 @@ re6包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 内存型实例规格族r5
 
@@ -392,7 +444,7 @@ r5包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 内存增强型实例规格族re4
 
@@ -424,7 +476,7 @@ re4包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 内存增强型实例规格族re4e
 
@@ -453,7 +505,7 @@ re4e包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 内存网络增强型实例规格族se1ne
 
@@ -491,7 +543,7 @@ se1ne包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 内存型实例规格族se1
 
@@ -524,7 +576,7 @@ se1包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 相关链接
 
