--- a/cn.zh-CN/实例/管理实例/自定义CPU选项/通用型实例规格族取值表.md
+++ b/cn.zh-CN/实例/管理实例/自定义CPU选项/通用型实例规格族取值表.md
@@ -2,6 +2,18 @@
 
 本文列出通用型实例规格族的CPU物理核心数与线程数取值，供您在自定义CPU选项时查询。
 
+## g7a的CPU物理核心数与线程数取值表
+
+|实例规格|默认vCPU数|CPU物理核心数取值范围|每核线程数默认值|每核线程数取值范围|
+|----|-------|------------|--------|---------|
+|ecs.g7a.large|2|1|2|1、2|
+|ecs.g7a.xlarge|4|2|2|1、2|
+|ecs.g7a.2xlarge|8|2、4|2|1、2|
+|ecs.g7a.4xlarge|16|2、4、6、8|2|1、2|
+|ecs.g7a.8xlarge|32|2、4、6、8、10、12、14、16|2|1、2|
+|ecs.g7a.16xlarge|64|2、4、6、8、10、12、14、16、18、20、22、24、26、28、30、32|2|1、2|
+|ecs.g7a.32xlarge|128|2、4、6、8、10、12、14、16、18、20、22、24、26、28、30、32、34、36、38、40、42、44、46、48、50、52、54、56、58、60、62、64|2|1、2|
+
 ## g7的CPU物理核心数与线程数取值表
 
 |实例规格|默认vCPU数|CPU物理核心数取值范围|每核线程数默认值|每核线程数取值范围|
