--- a/cn.zh-CN/动态与公告/新功能发布记录.md
+++ b/cn.zh-CN/动态与公告/新功能发布记录.md
@@ -7,6 +7,13 @@
 
 更多有关阿里云最新产品动态，请订阅[云产品动态](https://www.aliyun.com/product/new)。
 
+## 2021年05月
+
+|功能名称|功能描述|发布时间|发布地域|相关文档|
+|----|:---|:---|----|:---|
+|实例规格族|发布计算型弹性裸金属服务器实例规格族ebmc6me。|2021-05-28|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
+|实例规格族|发布通用型实例规格族g7a、计算型实例规格族c7a、内存型实例规格族r7a。|2021-05-28|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
+
 ## 2021年04月
 
 |功能名称|功能描述|发布时间|发布地域|相关文档|
