--- a/intl.zh-CN/动态与公告/新功能发布记录.md
+++ b/intl.zh-CN/动态与公告/新功能发布记录.md
@@ -5,6 +5,13 @@
 -   镜像版本更新信息请参见[公共镜像发布记录](/intl.zh-CN/镜像/公共镜像/公共镜像发布记录.md)及[Alibaba Cloud Linux 2发布记录](/intl.zh-CN/镜像/Alibaba Cloud Linux 2/Alibaba Cloud Linux 2发布记录.md)。
 -   服务器迁移中心SMC功能更新信息请参见[SMC新功能发布记录](/intl.zh-CN/新功能发布记录/新功能发布记录.md)。
 
+## 2021年05月
+
+|功能名称|功能描述|发布时间|发布地域|相关文档|
+|----|:---|:---|----|:---|
+|实例规格族|发布计算型弹性裸金属服务器实例规格族ebmc6me。|2021-05-28|部分|[实例规格族](/intl.zh-CN/实例/实例规格族.md)|
+|实例规格族|发布通用型实例规格族g7a、计算型实例规格族c7a、内存型实例规格族r7a。|2021-05-28|部分|[实例规格族](/intl.zh-CN/实例/实例规格族.md)|
+
 ## 2021年04月
 
 |功能名称|功能描述|发布时间|发布地域|相关文档|
