--- a/cn.zh-CN/产品简介/地域和可用区.md
+++ b/cn.zh-CN/产品简介/地域和可用区.md
@@ -8,9 +8,13 @@
 
 ![地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8478449951/p144045.png)
 
+有关地域和可用区的更多信息，请参见[阿里云全球基础设施](https://infrastructure.aliyun.com/)。
+
 ## 地域
 
 地域是指物理的数据中心。资源创建成功后不能更换地域。当前所有的地域、地域所在城市和Region ID的对照关系如下表所示。
+
+**说明：** 不同产品可选择的地域有所不同，请以各产品实际支持的地域为准。
 
 -   中国内地
 
