--- a/intl.zh-CN/产品简介/地域和可用区.md
+++ b/intl.zh-CN/产品简介/地域和可用区.md
@@ -6,6 +6,8 @@
 
 地域是指物理的数据中心。资源创建成功后不能更换地域。当前所有的地域、地域所在城市和Region ID的对照关系如下表所示。
 
+**说明：** 不同产品可选择的地域有所不同，请以各产品实际支持的地域为准。
+
 -   中国内地
 
     |地域名称|所在城市|Region ID|可用区数量|
@@ -21,7 +23,7 @@
     |华南 2|河源|cn-heyuan|2|
     |华南 3|广州|cn-guangzhou|2|
     |西南 1|成都|cn-chengdu|2|
-    |南京|南京（属于[本地地域](https://www.aliyun.com/page-source/website/infrastructure/local-regions)，邀测中）|cn-nanjing|1|
+    |南京|南京（属于本地地域，邀测中）|cn-nanjing|1|
 
 -   其他国家和地区
 
