--- a/cn.zh-CN/产品简介/地域和可用区.md
+++ b/cn.zh-CN/产品简介/地域和可用区.md
@@ -31,13 +31,13 @@
     |华南 2|河源|cn-heyuan|2|
     |华南 3|广州|cn-guangzhou|2|
     |西南 1|成都|cn-chengdu|2|
-    |南京|南京（属于[本地地域](https://www.aliyun.com/page-source/website/infrastructure/local-regions)，邀测中）|cn-nanjing|1|
+    |华东 5|南京（属于[本地地域](https://www.aliyun.com/page-source/website/infrastructure/local-regions)，邀测中）|cn-nanjing|1|
 
 -   其他国家和地区
 
     |地域名称|所在城市|Region ID|可用区数量|
     |----|----|---------|-----|
-    |中国香港|香港|cn-hongkong|2|
+    |中国香港|香港|cn-hongkong|3|
     |亚太东南 1|新加坡|ap-southeast-1|3|
     |亚太东南 2|悉尼|ap-southeast-2|2|
     |亚太东南 3|吉隆坡|ap-southeast-3|2|
