--- a/intl.zh-CN/块存储/扩容云盘/扩容概述.md
+++ b/intl.zh-CN/块存储/扩容云盘/扩容概述.md
@@ -46,6 +46,10 @@ keyword: [阿里云, ecs, 磁盘扩容, 扩容, 块存储]
 
 |云盘类别|扩容上限（GiB）|
 |:---|:--------|
-|普通云盘|2000|
 |ESSD云盘、SSD云盘或高效云盘|32768|
+|普通云盘|2000|
+
+## 扩容计费
+
+扩容云盘的计费方式和购买云盘一致。更多信息，请参见[块存储计费](/intl.zh-CN/产品计费/计费项/块存储计费.md)。
 
