--- a/cn.zh-CN/网络/配置IPv6地址/Linux实例配置IPv6地址/步骤6：测试网络连通性.md
+++ b/cn.zh-CN/网络/配置IPv6地址/Linux实例配置IPv6地址/步骤6：测试网络连通性.md
@@ -2,11 +2,11 @@
 
 您可以登录ECS实例测试网络的连通性，以保证配置的IPv6地址已具备公网访问能力。
 
-本示例中，将通过ping -6命令测试ECS实例与`aliyun.com`的连通性。
+本示例中，将通过ping -6（或者ping6）命令测试ECS实例与`aliyun.com`的连通性。
 
 1.  远程连接已配置IPv6地址的ECS实例。
 
-    具体操作请参见[通过Workbench远程连接Linux实例](/cn.zh-CN/实例/连接实例/连接Linux实例/通过Workbench远程连接Linux实例.md)。
+    具体操作请参见[通过密码或密钥认证登录Linux实例](/cn.zh-CN/实例/连接实例/使用Workbench连接实例/通过密码或密钥认证登录Linux实例.md)。
 
 2.  运行以下命令验证网络连通性。
 
@@ -16,6 +16,6 @@
 
     测试结果如下图所示。
 
-    ![ping -6](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8221013061/p174649.png)
+    ![ping -6](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8221013061/p174649.png)
 
 
