--- a/cn.zh-CN/实例/创建实例/使用向导创建实例.md
+++ b/cn.zh-CN/实例/创建实例/使用向导创建实例.md
@@ -13,7 +13,7 @@
 如果您需要使用其它扩展功能，也需要完成相应的准备工作，例如：
 
 -   如果创建Linux实例时要绑定SSH密钥对，需要在目标地域创建一个SSH密钥对。具体操作，请参见[创建SSH密钥对](/cn.zh-CN/安全/SSH密钥对/使用SSH密钥对/创建SSH密钥对.md)。
--   如果要设置自定义数据，需要准备实例自定义数据。具体操作，请参见[生成实例自定义数据](/cn.zh-CN/实例/管理实例/使用实例自定义数据/生成实例自定义数据.md)。
+-   如果要设置自定义数据，需要准备实例自定义数据。具体操作，请参见[ECS实例自定义数据概述](/cn.zh-CN/实例/管理实例/使用实例自定义数据/ECS实例自定义数据概述.md)。
 -   如果要为ECS实例关联某个角色，需要创建、授权实例RAM角色，并将其授予ECS实例。具体操作，请参见[授予实例RAM角色](/cn.zh-CN/安全/实例RAM角色/授予实例RAM角色.md)。
 
 1.  前往[实例创建页](https://ecs-buy.aliyun.com/wizard/#/)。
@@ -47,7 +47,7 @@
         **说明：**
 
         -   如果您要使用SSH密钥对，必须选择Linux系统。
-        -   如果您要设置实例自定义数据，只能选择特定的镜像，详细信息请参见[生成实例自定义数据](/cn.zh-CN/实例/管理实例/使用实例自定义数据/生成实例自定义数据.md)。
+        -   如果您要设置实例自定义数据，只能选择特定的镜像，详细信息请参见[ECS实例自定义数据概述](/cn.zh-CN/实例/管理实例/使用实例自定义数据/ECS实例自定义数据概述.md)。
         -   如果您要使用公共镜像中的Red Hat镜像，需注意实例规格族是否已支持，详情请参见[RHEL（Red Hat Enterprise Linux）镜像支持哪些实例规格族？](/cn.zh-CN/镜像/镜像FAQ.md)。
         -   公共镜像仅包括初始系统环境，更多镜像可以在镜像市场获取。
     5.  选择存储。
