--- a/cn.zh-CN/实例/选择实例规格/内存型/内存型.md
+++ b/cn.zh-CN/实例/选择实例规格/内存型/内存型.md
@@ -60,7 +60,7 @@ r7a包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
 |:---|:---|:------|-----------------|:-------|---|---|:---|-----------|-----------------|
-|ecs.r7a.large|2|16|1/最高10|90万|最高25万|2|3|1.25/最高11万|1/最高6|
+|ecs.r7a.large|2|16|1/最高10|90万|最高25万|2|3|1.25万/最高11万|1/最高6|
 |ecs.r7a.xlarge|4|32|1.5/最高10|100万|最高25万|4|4|2万/最高11万|1.5/最高6|
 |ecs.r7a.2xlarge|8|64|2.5/最高10|160万|最高25万|8|4|3万/最高11万|2/最高6|
 |ecs.r7a.4xlarge|16|128|5/最高10|200万|30万|8|8|6万/最高11万|3/最高6|
