--- a/cn.zh-CN/实例/选择实例规格/通用型.md
+++ b/cn.zh-CN/实例/选择实例规格/通用型.md
@@ -63,13 +63,13 @@ g7a包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
 |:---|:---|:------|-----------------|:-------|---|---|:---|-----------|-----------------|
-|ecs.g7a.large|2|8|1/最高10|90万|最高25万|2|3|1.25/最高11万|1/最高6|
+|ecs.g7a.large|2|8|1/最高10|90万|最高25万|2|3|1.25万/最高11万|1/最高6|
 |ecs.g7a.xlarge|4|16|1.5/最高10|100万|最高25万|4|4|2万/最高11万|1.5/最高6|
 |ecs.g7a.2xlarge|8|32|2.5/最高10|160万|最高25万|8|4|3万/最高11万|2/最高6|
 |ecs.g7a.4xlarge|16|64|5/最高10|200万|30万|8|8|6万/最高11万|3/最高6|
 |ecs.g7a.8xlarge|32|128|8/最高10|300万|60万|16|7|7.5万/最高11万|4/最高6|
-|ecs.g7a.16xlarge|64|256|16/无|600万|100万|32|7|15万|8|
-|ecs.g7a.32xlarge|128|512|32/无|1200万|200万|32|15|30万|16|
+|ecs.g7a.16xlarge|64|256|16/无|600万|100万|32|7|15万/无|8/无|
+|ecs.g7a.32xlarge|128|512|32/无|1200万|200万|32|15|30万/无|16/无|
 
 **说明：**
 
