--- a/intl.zh-CN/实例/选择实例规格/内存型/内存型.md
+++ b/intl.zh-CN/实例/选择实例规格/内存型/内存型.md
@@ -65,8 +65,8 @@ r7a包括的实例规格及指标数据如下表所示。
 |ecs.r7a.2xlarge|8|64|2.5/最高10|160万|最高25万|8|4|3万/最高11万|2/最高6|
 |ecs.r7a.4xlarge|16|128|5/最高10|200万|30万|8|8|6万/最高11万|3/最高6|
 |ecs.r7a.8xlarge|32|256|8/最高10|300万|60万|16|7|7.5万/最高11万|4/最高6|
-|ecs.r7a.16xlarge|64|512|16/无|600万|100万|32|7|15万|8|
-|ecs.r7a.32xlarge|128|1024|32/无|1200万|200万|32|15|30万|16|
+|ecs.r7a.16xlarge|64|512|16/无|600万|100万|32|7|15万/无|8/无|
+|ecs.r7a.32xlarge|128|1024|32/无|1200万|200万|32|15|30万/无|16/无|
 
 **说明：**
 
@@ -102,10 +102,10 @@ r7的特点如下：
 
 r7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|支持vTPM|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS基础/突发|云盘带宽基础/突发r（Gbit/s）|
-|:---|:---|:------|-----------------|:-------|------|---|---|:---|-------|-----------|------------------|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|支持vTPM|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|------|---|---|:---|-------|-----------|-----------------|
 |ecs.r7.large|2|16|2/最高10|90万|是|最高25万|2|3|6|2万/最高11万|1.5/最高6|
-|ecs.r7.xlarge|4|32|3/最高10|100万|是|最高25万|4|4|15|4万/最高11万|2/突发最高6|
+|ecs.r7.xlarge|4|32|3/最高10|100万|是|最高25万|4|4|15|4万/最高11万|2/最高6|
 |ecs.r7.2xlarge|8|64|5/最高10|160万|是|最高25万|8|4|15|5万/最高11万|3/最高6|
 |ecs.r7.3xlarge|12|96|8/最高10|240万|是|最高25万|8|8|15|7万/最高11万|4/最高6|
 |ecs.r7.4xlarge|16|128|10/最高25|300万|是|30万|8|8|30|8万/最高11万|5/最高6|
@@ -160,10 +160,10 @@ r7t包括的实例规格及指标数据如下表所示。
 |ecs.r7t.2xlarge|8|64|32|5/最高10|160万|是|最高25万|8|4|15|5万/最高11万|3/最高6|
 |ecs.r7t.3xlarge|12|96|48|8/最高10|240万|是|最高25万|8|8|15|7万/最高11万|4/最高6|
 |ecs.r7t.4xlarge|16|128|64|10/最高25|300万|是|30万|8|8|30|8万/最高11万|5/最高6|
-|ecs.r7t.6xlarge|24|192|96|12/最高25|450万|是|45万|12|8|30|11万|6/无|
-|ecs.r7t.8xlarge|32|256|128|16/最高25|600万|是|60万|16|8|30|15万|8/无|
-|ecs.r7t.16xlarge|64|512|256|32/无|1200万|是|120万|32|8|30|30万|16/无|
-|ecs.r7t.32xlarge|128|1024|512|64/无|2400万|是|240万|32|15|30|60万|32/无|
+|ecs.r7t.6xlarge|24|192|96|12/最高25|450万|是|45万|12|8|30|11万/无|6/无|
+|ecs.r7t.8xlarge|32|256|128|16/最高25|600万|是|60万|16|8|30|15万/无|8/无|
+|ecs.r7t.16xlarge|64|512|256|32/无|1200万|是|120万|32|8|30|30万/无|16/无|
+|ecs.r7t.32xlarge|128|1024|512|64/无|2400万|是|240万|32|15|30|60万/无|32/无|
 
 **说明：**
 
