--- a/intl.zh-CN/安全/安全组/安全组概述.md
+++ b/intl.zh-CN/安全/安全组/安全组概述.md
@@ -30,8 +30,13 @@ keyword: [安全组, 网络访问控制, 阿里云, ecs, 企业安全组]
 
 |-   入方向：拒绝所有访问请求
 -   出方向：拒绝所有访问请求 |
-|手动添加安全组规则|可按需添加允许或拒绝策略的规则|仅可按需添加允许策略的规则|
-|设置规则优先级|默认值为1，可修改|固定为1，不支持修改|
+|默认安全组规则|-   入方向：放行80、443、22、3389及ICMP协议，可修改
+-   出方向：允许所有访问请求
+
+|-   入方向：放行80、443、22、3389及ICMP协议，可修改
+-   出方向：拒绝所有访问请求 |
+|手动添加安全组规则|可按需添加允许或拒绝策略的规则|可按需添加允许或拒绝策略的规则|
+|设置规则优先级|默认值为1，可修改|默认值为1，可修改|
 |授权给其他安全组|支持组组授权|不支持组组授权|
 |支持绑定弹性网卡到任意实例规格|否，实例网络类型必须是专有网络VPC|否，实例网络类型必须是专有网络VPC|
 |能容纳的私网IP地址数量|2000|65536|
@@ -44,22 +49,18 @@ keyword: [安全组, 网络访问控制, 阿里云, ecs, 企业安全组]
 
 |属性|说明|
 |--|--|
-|网卡类型|根据实例的网络类型区分： -   专有网络VPC不需要设置。
--   经典网络支持内网和公网。 |
-|规则方向|支持入方向和出方向。|
-|授权策略|支持允许、拒绝两种访问策略。 **说明：** 企业安全组仅支持设置允许策略。 |
-|协议类型|应用层协议，例如SSH、ICMP、RDP等。|
+|规则方向|根据实例的网络类型区分： -   专有网络VPC支持入方向和出方向。
+-   经典网络支持公网出、入方向，内网出、入方向。 |
+|授权策略|支持允许、拒绝两种访问策略。|
+|协议类型|TCP、UDP、ICMP（IPv4）和GRE。|
 |端口范围|应用或协议开启的端口。详情可参见[常用端口](/intl.zh-CN/安全/安全组/常用端口的典型应用.md)。|
 |优先级|优先级的取值范围为1~100，数值越小，代表优先级越高。
 
 同类型规则间依赖优先级决定最终执行的规则。当ECS实例加入了多个安全组时，多个安全组会从高到低依次匹配规则。最终生效的安全组规则如下：
 
 -   如果两条安全组规则只有授权策略不同：拒绝策略的规则生效，允许策略的规则不生效。
--   如果两条安全组规则只有优先级不同：优先级高的规则生效。
-
-**说明：** 企业安全组规则优先级固定为1，不支持修改。 |
-|授权类型|支持IP地址段访问和安全组访问。 **说明：** 企业安全组不支持设置安全组访问，即不支持组组授权。 |
-|授权对象|支持设置IP地址段和安全组ID。**说明：** 企业安全组不支持设置安全组ID，即不支持组组授权。 |
+-   如果两条安全组规则只有优先级不同：优先级高的规则生效。 |
+|授权对象|支持设置IP地址段和安全组ID。 **说明：** 企业安全组不支持设置安全组ID，即不支持组组授权。 |
 
 不同通信场景需要设置的安全组规则属性不同。例如，您使用Xshell客户端远程连接Linux系统ECS实例时，当安全组检测到从公网或内网有SSH请求，会逐一检查入方向上安全组规则、发送请求的设备的IP地址是否已存在、优先级是为同类规则第一、授权策略是否为允许、22端口是否开启等。只有匹配到一条安全组规则允许放行该请求时，方才建立数据通信。下图为使用Xshell远程连接Linux系统ECS实例的规则匹配举例。
 
