--- a/cn.zh-CN/实例/实例规格族.md
+++ b/cn.zh-CN/实例/实例规格族.md
@@ -1955,17 +1955,17 @@ hfc7的特点如下：
 
 hfc7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.hfc7.large|2|4.0|1.2|10.0|90|25|2|2|6|2.0|1.0|
-|ecs.hfc7.xlarge|4|8.0|2.0|10.0|100|25|4|3|15|3.0|1.5|
-|ecs.hfc7.2xlarge|8|16.0|3.0|10.0|160|25|8|4|15|4.5|2.0|
-|ecs.hfc7.3xlarge|12|24.0|4.5|10.0|200|25|8|6|15|6.0|2.5|
-|ecs.hfc7.4xlarge|16|32.0|6.0|10.0|250|30|8|8|30|7.5|3.0|
-|ecs.hfc7.6xlarge|24|48.0|8.0|10.0|300|45|12|8|30|9.0|4.0|
-|ecs.hfc7.8xlarge|32|64.0|10.0|无|400|60|16|8|30|10.5|5.0|
-|ecs.hfc7.12xlarge|48|96.0|16.0|无|600|100|24|8|30|15.0|8.0|
-|ecs.hfc7.24xlarge|96|192.0|32.0|无|1200|180|32|15|30|30.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:----------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.hfc7.large|2|4|1.2/10|90万|25万|2|2|6|2万|1|
+|ecs.hfc7.xlarge|4|8|2/10|100万|25万|4|3|15|3万|1.5|
+|ecs.hfc7.2xlarge|8|16|3/10|160万|25万|8|4|15|4.5万|2|
+|ecs.hfc7.3xlarge|12|24|4.5/10|200万|25万|8|6|15|6万|2.5|
+|ecs.hfc7.4xlarge|16|32|6/10|250万|30万|8|8|30|7.5万|3|
+|ecs.hfc7.6xlarge|24|48|8/10|300万|45万|12|8|30|9万|4|
+|ecs.hfc7.8xlarge|32|64|10/无|400万|60万|16|8|30|10.5万|5|
+|ecs.hfc7.12xlarge|48|96|16/无|600万|100万|24|8|30|15万|8|
+|ecs.hfc7.24xlarge|96|192|32/无|1200万|180万|32|15|30|30万|16|
 
 **说明：**
 
@@ -2017,18 +2017,18 @@ hfc6的特点如下：
 
 hfc6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:----------|:--|:---|-------|---------|------------|
-|ecs.hfc6.large|2|4.0|1.0|3.0|30|2|2|6|1.0|1.0|
-|ecs.hfc6.xlarge|4|8.0|1.5|5.0|50|4|3|10|2.0|1.5|
-|ecs.hfc6.2xlarge|8|16.0|2.5|8.0|80|8|4|10|2.5|2.0|
-|ecs.hfc6.3xlarge|12|24.0|4.0|10.0|90|8|6|10|3.0|2.5|
-|ecs.hfc6.4xlarge|16|32.0|5.0|10.0|100|8|8|20|4.0|3.0|
-|ecs.hfc6.6xlarge|24|48.0|7.5|10.0|150|12|8|20|5.0|4.0|
-|ecs.hfc6.8xlarge|32|64.0|10.0|无|200|16|8|20|6.0|5.0|
-|ecs.hfc6.10xlarge|40|96.0|12.5|无|300|32|7|20|10.0|8.0|
-|ecs.hfc6.16xlarge|64|128.0|20.0|无|400|32|8|20|12.0|10.0|
-|ecs.hfc6.20xlarge|80|192.0|25.0|无|600|32|15|20|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:----------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.hfc6.large|2|4|1/3|30万|3.5万|2|2|6|1万|1|
+|ecs.hfc6.xlarge|4|8|1.5/5|50万|7万|4|3|10|2万|1.5|
+|ecs.hfc6.2xlarge|8|16|2.5/8|80万|15万|8|4|10|2.5万|2|
+|ecs.hfc6.3xlarge|12|24|4/10|90万|22万|8|6|10|3万|2.5|
+|ecs.hfc6.4xlarge|16|32|5/10|100万|30万|8|8|20|4万|3|
+|ecs.hfc6.6xlarge|24|48|7.5/10|150万|45万|12|8|20|5万|4|
+|ecs.hfc6.8xlarge|32|64|10/无|200万|60万|16|8|20|6万|5|
+|ecs.hfc6.10xlarge|40|96|12.5/无|300万|100万|32|7|20|10万|8|
+|ecs.hfc6.16xlarge|64|128|20/无|400万|120万|32|8|20|12万|10|
+|ecs.hfc6.20xlarge|80|192|25/无|600万|180万|32|15|20|20万|16|
 
 **说明：**
 
@@ -2068,17 +2068,17 @@ hfg7的特点如下：
 
 hfg7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.hfg7.large|2|8.0|1.2|10.0|90|25|2|2|6|2.0|1.0|
-|ecs.hfg7.xlarge|4|16.0|2.0|10.0|100|25|4|3|15|3.0|1.5|
-|ecs.hfg7.2xlarge|8|32.0|3.0|10.0|160|25|8|4|15|4.5|2.0|
-|ecs.hfg7.3xlarge|12|48.0|4.5|10.0|200|25|8|6|15|6.0|2.5|
-|ecs.hfg7.4xlarge|16|64.0|6.0|10.0|250|30|8|8|30|7.5|3.0|
-|ecs.hfg7.6xlarge|24|96.0|8.0|10.0|300|45|12|8|30|9.0|4.0|
-|ecs.hfg7.8xlarge|32|128.0|10.0|无|400|60|16|8|30|10.5|5.0|
-|ecs.hfg7.12xlarge|48|192.0|16.0|无|600|100|24|8|30|15.0|8.0|
-|ecs.hfg7.24xlarge|96|384.0|32.0|无|1200|180|32|15|30|30.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:----------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.hfg7.large|2|8|1.2/10|90万|25万|2|2|6|2万|1|
+|ecs.hfg7.xlarge|4|16|2/10|100万|25万|4|3|15|3万|1.5|
+|ecs.hfg7.2xlarge|8|32|3/10|160万|25万|8|4|15|4.5万|2|
+|ecs.hfg7.3xlarge|12|48|4.5/10|200万|25万|8|6|15|6万|2.5|
+|ecs.hfg7.4xlarge|16|64|6/10|250万|30万|8|8|30|7.5万|3|
+|ecs.hfg7.6xlarge|24|96|8/10|300万|45万|12|8|30|9万|4|
+|ecs.hfg7.8xlarge|32|128|10/无|400万|60万|16|8|30|10.5万|5|
+|ecs.hfg7.12xlarge|48|192|16/无|600万|100万|24|8|30|15万|8|
+|ecs.hfg7.24xlarge|96|384|32/无|1200万|180万|32|15|30|30万|16|
 
 **说明：**
 
@@ -2132,18 +2132,18 @@ hfg6的特点如下：
 
 hfg6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:----------|:--|:---|-------|---------|------------|
-|ecs.hfg6.large|2|8.0|1.0|3.0|30|2|2|6|1.0|1.0|
-|ecs.hfg6.xlarge|4|16.0|1.5|5.0|50|4|3|10|2.0|1.5|
-|ecs.hfg6.2xlarge|8|32.0|2.5|8.0|80|8|4|10|2.5|2.0|
-|ecs.hfg6.3xlarge|12|48.0|4.0|10.0|90|8|6|10|3.0|2.5|
-|ecs.hfg6.4xlarge|16|64.0|5.0|10.0|100|8|8|20|4.0|3.0|
-|ecs.hfg6.6xlarge|24|96.0|7.5|10.0|150|12|8|20|5.0|4.0|
-|ecs.hfg6.8xlarge|32|128.0|10.0|无|200|16|8|20|6.0|5.0|
-|ecs.hfg6.10xlarge|40|192.0|12.5|无|300|32|7|20|10.0|8.0|
-|ecs.hfg6.16xlarge|64|256.0|20.0|无|400|32|8|20|12.0|10.0|
-|ecs.hfg6.20xlarge|80|384.0|25.0|无|600|32|15|20|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:----------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.hfg6.large|2|8|1/3|30万|3.5万|2|2|6|1万|1|
+|ecs.hfg6.xlarge|4|16|1.5/5|50万|7万|4|3|10|2万|1.5|
+|ecs.hfg6.2xlarge|8|32|2.5/8|80万|15万|8|4|10|2.5万|2|
+|ecs.hfg6.3xlarge|12|48|4/10|90万|22万|8|6|10|3万|2.5|
+|ecs.hfg6.4xlarge|16|64|5/10|100万|30万|8|8|20|4万|3|
+|ecs.hfg6.6xlarge|24|96|7.5/10|150万|45万|12|8|20|5万|4|
+|ecs.hfg6.8xlarge|32|128|10/无|200万|60万|16|8|20|6万|5|
+|ecs.hfg6.10xlarge|40|192|12.5/无|300万|100万|32|7|20|10万|8|
+|ecs.hfg6.16xlarge|64|256|20/无|400万|120万|32|8|20|12万|10|
+|ecs.hfg6.20xlarge|80|384|25/无|600万|180万|32|15|20|20万|16|
 
 **说明：**
 
@@ -2181,17 +2181,17 @@ hfr7的特点如下：
 
 hfr7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.hfr7.large|2|16.0|1.2|10.0|90|25|2|2|6|2.0|1.0|
-|ecs.hfr7.xlarge|4|32.0|2.0|10.0|100|25|4|3|15|3.0|1.5|
-|ecs.hfr7.2xlarge|8|64.0|3.0|10.0|160|25|8|4|15|4.5|2.0|
-|ecs.hfr7.3xlarge|12|96.0|4.5|10.0|200|25|8|6|15|6.0|2.5|
-|ecs.hfr7.4xlarge|16|128.0|6.0|10.0|250|30|8|8|30|7.5|3.0|
-|ecs.hfr7.6xlarge|24|192.0|8.0|10.0|300|45|12|8|30|9.0|4.0|
-|ecs.hfr7.8xlarge|32|256.0|10.0|无|400|60|16|8|30|10.5|5.0|
-|ecs.hfr7.12xlarge|48|384.0|16.0|无|600|100|24|8|30|15.0|8.0|
-|ecs.hfr7.24xlarge|96|768.0|32.0|无|1200|180|32|15|30|30.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:----------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.hfr7.large|2|16|1.2/10|90万|25万|2|2|6|2万|1|
+|ecs.hfr7.xlarge|4|32|2/10|100万|25万|4|3|15|3万|1.5|
+|ecs.hfr7.2xlarge|8|64|3/10|160万|25万|8|4|15|4.5万|2|
+|ecs.hfr7.3xlarge|12|96|4.5/10|200万|25万|8|6|15|6万|2.5|
+|ecs.hfr7.4xlarge|16|128|6/10|250万|30万|8|8|30|7.5万|3|
+|ecs.hfr7.6xlarge|24|192|8/10|300万|45万|12|8|30|9万|4|
+|ecs.hfr7.8xlarge|32|256|10/无|400万|60万|16|8|30|10.5万|5|
+|ecs.hfr7.12xlarge|48|384|16/无|600万|100万|24|8|30|15万|8|
+|ecs.hfr7.24xlarge|96|768|32/无|1200万|180万|32|15|30|30万|16|
 
 **说明：**
 
@@ -2242,18 +2242,18 @@ hfr6的特点如下：
 
 hfr6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:----------|:--|:---|-------|---------|------------|
-|ecs.hfr6.large|2|16.0|1.0|3.0|30|2|2|6|1.0|1.0|
-|ecs.hfr6.xlarge|4|32.0|1.5|5.0|50|4|3|10|2.0|1.5|
-|ecs.hfr6.2xlarge|8|64.0|2.5|8.0|80|8|4|10|2.5|2.0|
-|ecs.hfr6.3xlarge|12|96.0|4.0|10.0|90|8|6|10|3.0|2.5|
-|ecs.hfr6.4xlarge|16|128.0|5.0|10.0|100|8|8|20|4.0|3.0|
-|ecs.hfr6.6xlarge|24|192.0|7.5|10.0|150|12|8|20|5.0|4.0|
-|ecs.hfr6.8xlarge|32|256.0|10.0|无|200|16|8|20|6.0|5.0|
-|ecs.hfr6.10xlarge|40|384.0|12.5|无|300|32|7|20|10.0|8.0|
-|ecs.hfr6.16xlarge|64|512.0|20.0|无|400|32|8|20|12.0|10.0|
-|ecs.hfr6.20xlarge|80|768.0|25.0|无|600|32|15|20|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:----------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.hfr6.large|2|16|1/3|30万|3.5万|2|2|6|1万|1|
+|ecs.hfr6.xlarge|4|32|1.5/5|50万|7万|4|3|10|2万|1.5|
+|ecs.hfr6.2xlarge|8|64|2.5/8|80万|15万|8|4|10|2.5万|2|
+|ecs.hfr6.3xlarge|12|96|4/10|90万|22万|8|6|10|3万|2.5|
+|ecs.hfr6.4xlarge|16|128|5/10|100万|30万|8|8|20|4万|3|
+|ecs.hfr6.6xlarge|24|192|7.5/10|150万|45万|12|8|20|5万|4|
+|ecs.hfr6.8xlarge|32|256|10/无|200万|60万|16|8|20|6万|5|
+|ecs.hfr6.10xlarge|40|384|12.5/无|300万|100万|32|7|20|10万|8|
+|ecs.hfr6.16xlarge|64|512|20/无|400万|120万|32|8|20|12万|10|
+|ecs.hfr6.20xlarge|80|768|25/无|600万|180万|32|15|20|20万|16|
 
 **说明：**
 
@@ -2566,15 +2566,15 @@ hfc5的特点如下：
 
 hfc5包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.hfc5.large|2|4.0|1.0|30|2|2|6|
-|ecs.hfc5.xlarge|4|8.0|1.5|50|2|3|10|
-|ecs.hfc5.2xlarge|8|16.0|2.0|100|2|4|10|
-|ecs.hfc5.3xlarge|12|24.0|2.5|130|4|6|10|
-|ecs.hfc5.4xlarge|16|32.0|3.0|160|4|8|20|
-|ecs.hfc5.6xlarge|24|48.0|4.5|200|6|8|20|
-|ecs.hfc5.8xlarge|32|64.0|6.0|250|8|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.hfc5.large|2|4|1|30万|2|2|6|
+|ecs.hfc5.xlarge|4|8|1.5|50万|2|3|10|
+|ecs.hfc5.2xlarge|8|16|2|100万|2|4|10|
+|ecs.hfc5.3xlarge|12|24|2.5|130万|4|6|10|
+|ecs.hfc5.4xlarge|16|32|3|160万|4|8|20|
+|ecs.hfc5.6xlarge|24|48|4.5|200万|6|8|20|
+|ecs.hfc5.8xlarge|32|64|6|250万|8|8|20|
 
 **说明：**
 
@@ -2601,16 +2601,16 @@ hfg5的特点如下：
 
 hfg5包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.hfg5.large|2|8.0|1.0|30|2|2|6|
-|ecs.hfg5.xlarge|4|16.0|1.5|50|2|3|10|
-|ecs.hfg5.2xlarge|8|32.0|2.0|100|2|4|10|
-|ecs.hfg5.3xlarge|12|48.0|2.5|130|4|6|10|
-|ecs.hfg5.4xlarge|16|64.0|3.0|160|4|8|20|
-|ecs.hfg5.6xlarge|24|96.0|4.5|200|6|8|20|
-|ecs.hfg5.8xlarge|32|128.0|6.0|250|8|8|20|
-|ecs.hfg5.14xlarge|56|160.0|10.0|400|14|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.hfg5.large|2|8|1|30万|2|2|6|
+|ecs.hfg5.xlarge|4|16|1.5|50万|2|3|10|
+|ecs.hfg5.2xlarge|8|32|2|100万|2|4|10|
+|ecs.hfg5.3xlarge|12|48|2.5|130万|4|6|10|
+|ecs.hfg5.4xlarge|16|64|3|160万|4|8|20|
+|ecs.hfg5.6xlarge|24|96|4.5|200万|6|8|20|
+|ecs.hfg5.8xlarge|32|128|6|250万|8|8|20|
+|ecs.hfg5.14xlarge|56|160|10|400万|14|8|20|
 
 **说明：**
 
