--- a/cn.zh-CN/实例/选择实例规格/弹性裸金属服务器/弹性裸金属服务器概述.md
+++ b/cn.zh-CN/实例/选择实例规格/弹性裸金属服务器/弹性裸金属服务器概述.md
@@ -711,6 +711,8 @@ ebmi2g包括的实例规格及指标数据如下表所示。
 
 ## GPU计算型弹性裸金属服务器实例规格族ebmgn7i
 
+本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+
 ebmgn7i的特点如下：
 
 -   基于神龙架构，实现软件定义硬件计算，灵活弹性与强悍性能兼备
