--- a/intl.zh-CN/实例/选择实例规格/弹性裸金属服务器/弹性裸金属服务器概述.md
+++ b/intl.zh-CN/实例/选择实例规格/弹性裸金属服务器/弹性裸金属服务器概述.md
@@ -685,6 +685,8 @@ ebmhfr6包括的实例规格及指标数据如下表所示。
 
 ## GPU计算型弹性裸金属服务器实例规格族ebmgn7i
 
+本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+
 ebmgn7i的特点如下：
 
 -   基于神龙架构，实现软件定义硬件计算，灵活弹性与强悍性能兼备
