--- a/cn.zh-CN/块存储/块存储介绍/云盘概述.md
+++ b/cn.zh-CN/块存储/块存储介绍/云盘概述.md
@@ -30,7 +30,7 @@ keyword: [云盘, 磁盘, ESSD, SSD云盘, 高效云盘]
 |PL3|PL2|PL1|PL0|
 |:---|:-----|:----|:---|----|
 |:--|:--|:--|:--|
-|单盘最大容量（GiB）|1261~32768|461~32768|20~32768|40~32768|32768|32768|2000|
+|单盘容量范围（GiB）|1261~32768|461~32768|20~32768|40~32768|32768|32768|2000|
 |最大IOPS|1000000|100000|50000|10000|25000|5000|数百|
 |最大吞吐量（MB/s）|4000|750|350|180|300|140|30~40|
 |单盘IOPS性能计算公式|min\{1800+50\*容量, 1000000\}|min\{1800+50\*容量, 100000\}|min\{1800+50\*容量, 50000\}|min\{ 1800+12\*容量, 10000 \}|min\{1800+30\*容量, 25000\}|min\{1800+8\*容量, 5000\}|无|
