--- a/intl.zh-CN/SDK示例/Java示例/创建ECS实例/创建抢占式实例.md
+++ b/intl.zh-CN/SDK示例/Java示例/创建ECS实例/创建抢占式实例.md
@@ -37,8 +37,8 @@ keyword: [sdk, java sdk, ecs, aliyun-java-sdk-ecs, 竞价实例]
                 System.out.println("ErrMsg:" + e.getErrMsg());
                 System.out.println("RequestId:" + e.getRequestId());
             }
+            return null;
         }
-    
      }
     ```
 
